<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>slam_toolbox</name>
  <description>
     This package provides a sped up improved slam karto with updated SDK and visualization and modification toolsets
  </description>
  <version>1.1.5</version>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <author>Steve Macenski</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>slam_toolbox_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sparse_bundle_adjustment</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tbb</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>map_server</build_depend>
  <exec_depend>slam_toolbox_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sparse_bundle_adjustment</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>suitesparse</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>libceres-dev</exec_depend>
  <exec_depend>libg2o</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tbb</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>map_server</exec_depend>

  <depend>rostest</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <slam_toolbox plugin="${prefix}/solver_plugins.xml" />
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>

</package>
