<package>
  <name>slam_toolbox</name>
  <description>
     This package provides a sped up improved slam karto with updated SDK and visualization and modification toolsets
  </description>
  <version>1.5.7</version>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <author>Steve Macenski</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>slam_toolbox_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sparse_bundle_adjustment</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tbb</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>map_server</build_depend>
  <run_depend>slam_toolbox_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sparse_bundle_adjustment</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>suitesparse</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>libceres-dev</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tbb</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>map_server</run_depend>

  <test_depend>gtest</test_depend>

  <export>
    <slam_toolbox plugin="${prefix}/solver_plugins.xml" />
  </export>

</package>
