<package format="2">
  <name>slam_toolbox_msgs</name>
  <description>
     This package provides a sped up improved slam karto with updated SDK and visualization and modification toolsets
  </description>
  <version>1.5.7</version>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <author>Steve Macenski</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
