<package format="2">
  <name>slam_toolbox_rviz</name>
  <description>
     This package provides a sped up improved slam karto with updated SDK and visualization and modification toolsets
  </description>
  <version>1.5.6</version>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <author>Steve Macenski</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>slam_toolbox_msgs</depend>
  <depend>qtbase5-dev</depend>


  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>

</package>
