<?xml version="1.0"?>
<package>
  <name>karto_sdk</name>
  <version>1.1.4</version>
  <description>Catkinized ROS packaging of the OpenKarto library</description>

  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="lbettaieb@fetchrobotics.com">Luc Bettaieb</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>tbb</build_depend>
  <build_depend>libblas-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>tbb</run_depend>
  <run_depend>libblas-dev</run_depend>
  <run_depend>liblapack-dev</run_depend>

</package>
